--- a/index.html
+++ b/index.html
@@ -8,12 +8,55 @@
 </head>
 <body>
 
+<!-- MODAL LOGIN -->
+<div id="login-modal" class="login-modal">
+    <div class="login-container">
+        <h2>Acceso interfaz</h2>
+        <form id="login-form">
+            <input type="text" id="username" placeholder="Usuario" required />
+            <input type="password" id="password" placeholder="Contraseña" required />
+            <button type="submit">Iniciar Sesión</button>
+        </form>
+        <div id="login-error" class="login-error"></div>
+    </div>
+</div>
+
+<!-- CONTENEDOR PRINCIPAL (oculto hasta login) -->
+<div id="main-content" class="main-content" style="display: none;">
+    
+    <!-- BOTÓN LOGOUT -->
+    <div class="logout-container">
+        <button id="logout-btn" class="logout-btn">Cerrar Sesión</button>
+    </div>
+
 <div class="top-bar">
 
     <!-- IZQUIERDA: Título + última lectura -->
     <div class="top-left">
-        <h1>MAPA DE CALOR DEL SITIO VALENZUELA</h1>
+        <h1>HEATMAP VALENZUELA</h1>
         <div id="ultima-lectura"></div>
+        <div id="filters">
+            <label>
+            <input type="checkbox" data-field="temp" checked>
+            Temperatura
+            </label>
+
+            <label>
+            <input type="checkbox" data-field="ghs">
+            Online
+            </label>
+
+            <label>
+            <input type="checkbox" data-field="mod">
+            Modulados
+            </label>
+
+            <label>
+            <input type="checkbox" data-field="pot">
+            Potencia
+            </label>
+        </div>
+
     </div>
 
     <!-- DERECHA: tarjetas KPI -->
@@ -32,6 +75,11 @@
             <div class="pot-title">Miners Modulados</div>
             <div class="pot-value">--</div>
         </div>
+
+        <div id="total-hashrate" class="potencia-total potencia-azul">
+            <div class="pot-title">Hashrate</div>
+            <div class="pot-value">-- EH/s</div>
+        </div>
     </div>
 
 </div>
@@ -39,10 +87,13 @@
     <!-- Contenedor principal de todas las plataformas -->
        <div id="plataformas" class="bloque"></div>
 
+</div>
+
     <!-- JS al final del body para que el DOM ya exista -->
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
